--- a/Kubernates/api_ec2/hello-world-ec2/hello-world-ec2.csproj
+++ b/Kubernates/api_ec2/hello-world-ec2/hello-world-ec2.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>hello_world_ec2</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
-    <ContainerImageName>products-crud-api</ContainerImageName>
+    <ContainerRepository>products-crud-api</ContainerRepository>
     <ContainerImageTags>latest</ContainerImageTags>
     <PublishProfile>DefaultContainer</PublishProfile>
     <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
