--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Kubernates/api_ec2/hello-world-ec2/.vs
+/AzureAppAccess/.vs
