--- a/AzureAppAccess/CI/docker-ci.yml
+++ b/AzureAppAccess/CI/docker-ci.yml
@@ -3,12 +3,13 @@
 resources:
   repositories:
     - repository: self
-      trigger: none
+      trigger: 
+       - main
 
 variables:
   azureServiceConnection: 'azure subs'
-  subscriptionId: 'e7b3541e-ad64-439d-b66d-3274b6184bbb'
-  resourceGroup: 'donotuse'
+  subscriptionId: '86fcde80-267c-4d3b-8f28-bec95924273f'
+  resourceGroup: 'AZ400-RG153681980'
   location: 'westus2'
 
 stages:
@@ -28,7 +29,7 @@ stages:
         resourceGroupName: '$(resourceGroup)'
         location: '$(location)'
         templateLocation: 'Linked artifact'
-        csmFile: 'Bicep/acr.bicep'
+        csmFile: 'AzureAppAccess/infra/acr.bicep'
         deploymentMode: 'Incremental'
         deploymentOutputs: 'outputJson'
     - task: PowerShell@2
@@ -39,22 +40,22 @@ stages:
           $var=ConvertFrom-Json '$(outputJson)'
           $value=$var.acrLoginServer.value
           Write-Host "##vso[task.setvariable variable=acrLoginServer;]$value"
-    - task: Docker@0
+    - task: Docker@1
       displayName: 'Build the docker image'
       inputs:
         azureSubscription: $(azureServiceConnection)
         azureContainerRegistry: $(acrLoginServer)
-        dockerFile: 'CI/Dockerfile'
+        dockerFile: 'AzureAppAccess/Dockerfile'
         defaultContext: false
         context: $(Build.SourcesDirectory)
         includeLatestTag: true
-        imageName: milan/web:$(Build.BuildId)
-    - task: Docker@0
+        imageName: eshoponweb/web:$(Build.BuildId)
+    - task: Docker@1
       displayName: 'Push the docker images'
       inputs:
         azureSubscription: $(azureServiceConnection)
         azureContainerRegistry: $(acrLoginServer)
         action: 'Push an image'
-        imageName: milan/web:$(Build.BuildId)
+        imageName: eshoponweb/web:$(Build.BuildId)
         includeLatestTag: true
     
